@@ -26,7 +26,7 @@
 #ShowStatus=yes
 #CrashChangeVT=no
 #CrashShell=no
-#CrashReboot=no
+#CrashAction=freeze
 #CtrlAltDelBurstAction=reboot-force
 #CPUAffinity=
 #NUMAPolicy=default
